--- a/systems.html
+++ b/systems.html
@@ -43,15 +43,7 @@ $(document).ready(function () {
 		}
 		$('#tableDiv').append(table);
 		selectSystem(sol);
-		$(table).stupidtable().bind('aftertablesort', function(event, data) {
-			// data.column - the index of the column sorted after a click
-		    // data.direction - the sorting direction (either asc or desc)
-		
-		    var th = $(this).find("th");
-		    th.find(".arrow").remove();
-		    var arrow = data.direction === "asc" ? "↑" : "↓";
-		    th.eq(data.column).append('<span class="arrow">' + arrow +'</span>');
-		});
+		$(table).stupidtable().bind('aftertablesort', updateSortArrow);
 	});
 });
 
